syntax = "proto3";

package budget.v1;

option go_package = "gitlab.com/education/users-api/internal/pb/budget/v1";

message SimpleRow {
  string category = 1;
  double amount = 2;
}

message ExportBudgetRequest {
  string spreadsheet_id = 1;
  string sheet_name = 2;
  bool clear = 3;
  repeated SimpleRow rows = 4;
}

message ExportBudgetResponse {
  string written_range = 1;
  int32 rows = 2;
  string spreadsheet_url = 3;
}

message ImportBudgetRequest {
  string spreadsheet_id = 1;
  string sheet_name = 2;
}

message ImportBudgetResponse {
  repeated SimpleRow rows = 1;
}

message DownloadBudgetRequest {}

message DownloadBudgetResponse {
  repeated SimpleRow rows = 1;
}

service BudgetService {
  rpc ExportBudget(ExportBudgetRequest) returns (ExportBudgetResponse);
  rpc ImportBudget(ImportBudgetRequest) returns (ImportBudgetResponse);
  rpc DownloadBudget(DownloadBudgetRequest) returns (DownloadBudgetResponse);
}
